Fix nav item active color on mobile

--- a/source/assets/stylesheets/scss/base/_themes.scss
+++ b/source/assets/stylesheets/scss/base/_themes.scss
@@ -12,6 +12,10 @@
   .ch-pagination.ui.pagination.menu .item.active {
     border-bottom-color: #089f69;
   }
+
+  @media screen and (max-width: 767px) {
+    border-bottom-color: #089f69;
+  }
 }
 
 [data-theme="myfinance"] {
@@ -26,6 +30,10 @@
   }
 
   .ch-pagination.ui.pagination.menu .item.active {
+    border-bottom-color: #2483c4;
+  }
+
+  @media screen and (max-width: 767px) {
     border-bottom-color: #2483c4;
   }
 }
@@ -43,5 +51,11 @@
 
   .ch-pagination.ui.pagination.menu .item.active {
     border-bottom-color: #FF0159;
+  }
+
+  @media screen and (max-width: 767px) {
+    .ch-nav:not(.active) .ch-menu-item.active a:before {
+      border-bottom-color: #FF0159;
+    }
   }
 }
